--- a/index.html
+++ b/index.html
@@ -11,19 +11,25 @@
 <div class="container">
   <div ng-include="'templates/header.html'"></div>
   <div ng-view></div>
-  <div ng-include="'templates/partials/user-login-register.html'"></div>
 
   <div ng-include="'templates/footer.html'"></div>
 </div>
 
+<div ng-if="authService.isLoggedIn()"><span>{{authService.getCurrentUser().username}}></span></div>
+
 <script src="lib/jquery/dist/jquery.js"></script>
-<script src="lib/noty/js/noty/jquery.noty.js"></script>
+<script src="lib/jquery.noty/jquery.noty.js"></script>
 <script src="lib/bootstrap/dist/js/bootstrap.js"></script>
 <script src="lib/angular/angular.js"></script>
 <script src="lib/angular/angular-resource.js"></script>
 <script src="lib/angular/angular-route.js"></script>
 <script src="lib/ui.bootstrap/ui.bootstrap.pagination-0.12.0.js"></script>
 <script src="js/app.js"></script>
+
+<script src="js/services/authService.js"></script>
+<script src="js/services/notifyService.js"></script>
+<script src="js/controllers/authController.js"></script>
+<script src="js/controllers/appController.js"></script>
 
 </body>
 </html>
