Various UI changes on user login and logout. Added logout functionality.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="SocialNetwork">
+<html lang="en" ng-app="SocialNetwork" ng-controller="AppController">
 <head>
   <meta charset="utf-8">
   <title>Social Network App</title>
@@ -10,12 +10,12 @@
 <body>
 <div class="container">
   <div ng-include="'templates/header.html'"></div>
+
   <div ng-view></div>
 
   <div ng-include="'templates/footer.html'"></div>
 </div>
 
-<div ng-if="authService.isLoggedIn()"><span>{{authService.getCurrentUser().username}}></span></div>
 
 <script src="lib/jquery/dist/jquery.js"></script>
 <script src="lib/jquery.noty/jquery.noty.js"></script>
@@ -28,8 +28,12 @@
 
 <script src="js/services/authService.js"></script>
 <script src="js/services/notifyService.js"></script>
-<script src="js/controllers/authController.js"></script>
-<script src="js/controllers/appController.js"></script>
+
+<script src="js/controllers/AuthController.js"></script>
+<script src="js/controllers/AppController.js"></script>
+<script src="js/controllers/HomeController.js"></script>
+<script src="js/services/userService.js"></script>
+
 
 </body>
 </html>
