--- a/index.html
+++ b/index.html
@@ -24,15 +24,17 @@
 <script src="lib/angular/angular-resource.js"></script>
 <script src="lib/angular/angular-route.js"></script>
 <script src="lib/ui.bootstrap/ui.bootstrap.pagination-0.12.0.js"></script>
+<script data-require="ui-bootstrap@*" data-semver="0.11.0" src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.12.0.min.js"></script>
 <script src="js/app.js"></script>
 
 <script src="js/services/authService.js"></script>
 <script src="js/services/notifyService.js"></script>
-
-<script src="js/controllers/AuthController.js"></script>
-<script src="js/controllers/AppController.js"></script>
-<script src="js/controllers/HomeController.js"></script>
 <script src="js/services/userService.js"></script>
+
+<script src="js/controllers/authController.js"></script>
+<script src="js/controllers/appController.js"></script>
+<script src="js/controllers/HomeController.js"></script>
+
 
 
 </body>
