--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
 <script src="js/services/authService.js"></script>
 <script src="js/services/notifyService.js"></script>
 <script src="js/services/userService.js"></script>
+<script src="js/services/friendRequestService.js"></script>
 
 <script src="js/controllers/authController.js"></script>
 <script src="js/controllers/appController.js"></script>
 <script src="js/controllers/HomeController.js"></script>
+<script src="js/controllers/FriendRequestController.js"></script>
 
 
 
