--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Social Network App</title>
   <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css"/>
   <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap-theme.css"/>
+  <link rel="stylesheet" href="css/autocomplete.css"/>
   <link rel="stylesheet" href="css/css.css"/>
 </head>
 <body>
@@ -15,6 +16,7 @@
 
   <div ng-include="'templates/footer.html'"></div>
 </div>
+
 
 
 <script src="lib/jquery/dist/jquery.js"></script>
@@ -36,6 +38,7 @@
 <script src="js/controllers/appController.js"></script>
 <script src="js/controllers/HomeController.js"></script>
 <script src="js/controllers/FriendRequestController.js"></script>
+<script src="js/controllers/UserEditProfileController.js"></script>
 
 
 
